fano factor pipeline

--- a/python_analysis/mean_matched_ff.ipynb
+++ b/python_analysis/mean_matched_ff.ipynb
@@ -221,6 +221,34 @@
     "ff = mean_matched_ff(counts; nbins=15, n_reps=50, seed=123)\n",
     "println(ff)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "c5d171b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Main.Analysis"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "include(\"../src/Analysis.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b19e1f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
