some analysis on the co-fano sharing E and I result

--- a/analysis/Statistics.ipynb
+++ b/analysis/Statistics.ipynb
@@ -264,8 +264,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "db8454b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MersenneTwister(0x0490526a6b17cd92)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using Random\n",
+    "\n",
+    "seed = 0\n",
+    "master = MersenneTwister(seed)\n",
+    "mk() = MersenneTwister(rand(master, UInt))  # derive independent sub-seeds\n",
+    "ind_e_rng = mk()  # independent E only\n",
+    "ind_i_rng = mk()  # independent I only\n",
+    "sh_e_rng = mk()   # shared E only\n",
+    "sh_i_rng = mk()   # shared I only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fd8ec1d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Float64}:\n",
+       " 0.5024907658430737\n",
+       " 0.7570104753577487\n",
+       " 0.676697740533772\n",
+       " 0.5355511369621517\n",
+       " 0.9569249452525677"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# showcase reproducibility of rngs\n",
+    "rand(ind_e_rng, 5)\n",
+    "rand(ind_e_rng, 5)  # different from above\n",
+    "ind_e_rng = mk()    # reset\n",
+    "rand(ind_e_rng, 5)  # same as first call\n",
+    "rand(ind_i_rng, 5)\n",
+    "rand(ind_i_rng, 5)  # different from above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ee32d12a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{Float64}:\n",
+       " 0.22669488202892518"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rand(ind_e_rng, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "92339ec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{Float64}:\n",
+       " 0.9069727318039289"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rand(ind_e_rng, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bddeb157",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "254c3eef",
    "metadata": {},
    "outputs": [],
    "source": []
